# amacl

./: .gitignore  README.md  pyproject.toml
background/: amacl_idea_v1.md  amacl_idea_v2.md  amacl_idea_v3.md
data/: seed_pool.jsonl
outputs/: generated_cases.jsonl
scripts/: preprocess_csv_to_jsonl.py
src/amacl/: __init__.py  agent.py  cli.py  config.py  modeling.py  operators.py  planner.py  registry.py  schemas.py  seed_samplers.py  utils.py
tests/: test_agent.py  test_seed_samplers.py
