[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amacl"
version = "0.1.0"
description = "AMACL MVP question-generation agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.45.0",
]

[project.scripts]
amacl-generate = "amacl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
